# agi-llm

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  cloud_config_example.ini  llm_config.ini  llm_config_example.ini  run.bat  run.sh
.claude/: settings.local.json
CMake/: AddBitNet.cmake  AddLlamaCpp.cmake  AddSDL3.cmake  AddSDL3_ttf.cmake  CheckDependencies.cmake
lib/nagi-llm/: CMakeLists.txt  README.md
lib/nagi-llm/CMake/: AddBitNet.cmake  AddLlamaCpp.cmake  patch_bitnet.py
lib/nagi-llm/backends/: llama_common.h
lib/nagi-llm/backends/bitnet/: nagi_llm_bitnet.c  nagi_llm_bitnet.h
lib/nagi-llm/backends/cloud/: nagi_llm_cloud.c  nagi_llm_cloud.h  nagi_llm_cloud_impl.c
lib/nagi-llm/backends/llamacpp/: nagi_llm_llamacpp.c  nagi_llm_llamacpp.h
lib/nagi-llm/include/: llm_config_parser.h  llm_utils.h  nagi_llm.h  nagi_llm_context.h
lib/nagi-llm/src/: llm_config_parser.c  llm_utils.c  nagi_llm.c  nagi_llm_context.c
src/: CMakeLists.txt  agi.h  base.c  base.h  initialise.c  llm_global.h  nagi_main.c  nagi_main.cpp  new_room.c  state_info.c
src/lib/: utf8_decode.c  utf8_decode.h
src/llm/: llm_context.c  llm_context.h  llm_parser.c  llm_parser.h
src/logic/: cmd_table.c  llm.c  llm.h  logic_base.c  logic_eval.c
src/res/: res_lzw.c  res_pic.c
src/sound/: pcm_out_sdl.c  tone_pcm.c
src/sys/: chargen.c  chargen.h  gfx.c  sdl_vid.c  sdl_vid.h
src/ui/: cmd_input.c  events.c  msg.c  msg.h  parse.c  printf.c  window.c  window.h
src/version/: standard.c
